--- a/BioSim1.tex
+++ b/BioSim1.tex
@@ -204,7 +204,7 @@
 \urlstyle{same}
 \hypersetup{
   pdftitle={Non-Parametric IND Biosimilarity Assessment for Small Analytical Sample Sizes},
-  pdfauthor={D Palahnuk},
+  pdfauthor={Donald Palahnuk},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
@@ -217,7 +217,7 @@ Sample Sizes}
 }
 \makeatother
 \subtitle{\textit{BioSim 1}}
-\author{D Palahnuk}
+\author{Donald Palahnuk}
 \date{\vhCurrentDate\\
 version \vhCurrentVersion\\
 \strut \\
@@ -238,9 +238,10 @@ Analytical Sample Sizes when dealing with IND Dossier Data''\\
 \begin{versionhistory}
   \vhEntry{0.0}{2023.11.15}{DP}{Created!}
   \vhEntry{0.1}{2023.11.29}{DP}{Update with more graphics, andded R-code blocks and calculation framework}
-  \vhEntry{0.2}{2023.12.03}{DP}{With the feedback of Wang Chen expanded and clarified for YZY discussions planned on 2023-12-05}
+  \vhEntry{0.2}{2023.12.03}{DP}{With the feedback of Wang Chen expanded and clarified for Client discussions planned on 2023-12-05}
   \vhEntry{0.3}{2023.12.04}{DP}{Clarified the role of pdf for $x$ and $y$ inline with linear model effect on clinical outcome}
-  \vhEntry{0.4}{2023.12.05}{DP}{Finalized draft for release to client}
+  \vhEntry{0.4}{2024.10.24}{DP}{Update for GitHub Repo}
+  \vhEntry{0.5}{2024.10.24}{DP}{For release - GitHub Repo}
 \end{versionhistory}
 
 \newpage
